--- a/src/app/modules/authors/authors.component.html
+++ b/src/app/modules/authors/authors.component.html
@@ -135,7 +135,7 @@
       <div class="col-lg-3">
         <div class="rrkkprcrd">
           <div class="rrcomcenalign1">
-            <img src="./assets/laptop.png" class="rounded-circle rrkkimgcard1" alt="...">
+            <img src="./assets/animoji.png" class="rounded-circle rrkkimgcard1" alt="...">
           </div>
           <div class="rrcomcenalign1">
             <p class="rrkkchead">Sathish <img src="./assets/startick.png" alt="Pubkin" class="rrkkcheadimg1"> </p>
@@ -168,7 +168,7 @@
         <div class="rrcomcenalign1">
           <div class="rrkkprcrd">
             <div class="rrcomcenalign1">
-              <img src="./assets/1img.jpg" class="rounded-circle rrkkimgcard1" alt="...">
+              <img src="./assets/animoji-24.png" class="rounded-circle rrkkimgcard1" alt="...">
             </div>
             <div class="rrcomcenalign1">
               <p class="rrkkchead">Karthi <img src="./assets/startick.png" alt="Pubkin" class="rrkkcheadimg1"> </p>
@@ -202,7 +202,7 @@
         <div class="rrcomcenalign1">
           <div class="rrkkprcrd">
             <div class="rrcomcenalign1">
-              <img src="./assets/laptop.png" class="rounded-circle rrkkimgcard1" alt="...">
+              <img src="./assets/animoji-19.png" class="rounded-circle rrkkimgcard1" alt="...">
             </div>
             <div class="rrcomcenalign1">
               <p class="rrkkchead">Viswa <img src="./assets/startick.png" alt="Pubkin" class="rrkkcheadimg1"> </p>
@@ -236,7 +236,7 @@
         <div class="rrcomendalign1">
           <div class="rrkkprcrd">
             <div class="rrcomcenalign1">
-              <img src="./assets/3img.jpg" class="rounded-circle rrkkimgcard1" alt="...">
+              <img src="./assets/animoji-22.png" class="rounded-circle rrkkimgcard1" alt="...">
             </div>
             <div class="rrcomcenalign1">
               <p class="rrkkchead">Rahul <img src="./assets/startick.png" alt="Pubkin" class="rrkkcheadimg1"> </p>
@@ -271,7 +271,7 @@
         <div class="col-lg-3">
           <div class="rrkkprcrd">
             <div class="rrcomcenalign1">
-              <img src="./assets/laptop.png" class="rounded-circle rrkkimgcard1" alt="...">
+              <img src="./assets/animoji-12.png" class="rounded-circle rrkkimgcard1" alt="...">
             </div>
             <div class="rrcomcenalign1">
               <p class="rrkkchead">Anusiya <img src="./assets/startick.png" alt="Pubkin" class="rrkkcheadimg1"> </p>
@@ -304,7 +304,7 @@
           <div class="rrcomcenalign1">
             <div class="rrkkprcrd">
               <div class="rrcomcenalign1">
-                <img src="./assets/3img.jpg" class="rounded-circle rrkkimgcard1" alt="...">
+                <img src="./assets/animoji-23.png" class="rounded-circle rrkkimgcard1" alt="...">
               </div>
               <div class="rrcomcenalign1">
                 <p class="rrkkchead">Dinesh <img src="./assets/startick.png" alt="Pubkin" class="rrkkcheadimg1"> </p>
@@ -338,7 +338,7 @@
           <div class="rrcomcenalign1">
             <div class="rrkkprcrd">
               <div class="rrcomcenalign1">
-                <img src="./assets/laptop.png" class="rounded-circle rrkkimgcard1" alt="...">
+                <img src="./assets/animoji-1.png" class="rounded-circle rrkkimgcard1" alt="...">
               </div>
               <div class="rrcomcenalign1">
                 <p class="rrkkchead">Jesi <img src="./assets/startick.png" alt="Pubkin" class="rrkkcheadimg1"> </p>
@@ -372,7 +372,7 @@
           <div class="rrcomendalign1">
             <div class="rrkkprcrd">
               <div class="rrcomcenalign1">
-                <img src="./assets/3img.jpg" class="rounded-circle rrkkimgcard1" alt="...">
+                <img src="./assets/animoji-13.png" class="rounded-circle rrkkimgcard1" alt="...">
               </div>
               <div class="rrcomcenalign1">
                 <p class="rrkkchead">Abdul <img src="./assets/startick.png" alt="Pubkin" class="rrkkcheadimg1"> </p>
