--- a/src/app/modules/profiledetails/profiledetails.component.html
+++ b/src/app/modules/profiledetails/profiledetails.component.html
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="row">
           <div class="container">
-            <div class="row">
+            <div class="row detscrol">
               <div class="col-4">
                 <div class="kkempcrd" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <img src="./assets/_add circle_.png" class="rraddcirimg1">
@@ -272,7 +272,7 @@
     </div>
 
     <div class="container wrkcontainer">
-      <div class="row">
+      <div class="row detscrol">
         <div class="col-4">
           <div class="kkempcrd" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
             <img src="./assets/_add circle_.png" class="rraddcirimg1">
@@ -380,7 +380,7 @@
       <p class="kkemphus1">Showcase your Degrees and Diplomas</p>
     </div>
     <div class="container wrkcontainer">
-      <div class="row">
+      <div class="row detscrol">
         <!-- Add Projects, links card -->
         <div class="col-4">
           <div class="kkempcrd" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -533,28 +533,28 @@
       <div class="container rrpubaligntop1">
         <div class="row">
           <div class="col-4">
-            <div class="rrexpfreealign1 rrpubcomcenalign1" (click)="onButtonClick('button1')" (click)="Exp1()"
+            <div class="rrexpfreealign1 rrpubcomcenalign12" (click)="onButtonClick('button1')" (click)="Exp1()"
               [ngClass]="{'selected': selectedButton === 'button1'}">
               <div>
-                <div class="rrpubcomcenalign1">
+                <div class="rrpubcomcenalign12">
                   <img class="rrfreeeximg1" src="./assets/Star 6.png" alt="Experience">
                 </div>
-                <div class="rrpubcomcenalign1">
+                <div class="rrpubcomcenalign12">
                   <p class="rrexpcont">I am new to this</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-4">
-            <div class="rrpubcomcenalign1">
-              <div class="rrexpfreealign1 rrpubcomcenalign1" (click)="onButtonClick('button2')" (click)="Exp2()"
+            <div class="rrpubcomcenalign12">
+              <div class="rrexpfreealign1 rrpubcomcenalign12" (click)="onButtonClick('button2')" (click)="Exp2()"
                 [ngClass]="{'selected': selectedButton === 'button2'}">
                 <div>
-                  <div class="rrpubcomcenalign1">
+                  <div class="rrpubcomcenalign12">
                     <img class="rrfreeeximg1 rrstar2align" src="./assets/Star 13.png" alt="Experience">
                     <img class="rrfreeeximg1 rrstar2align" src="./assets/Star 12.png" alt="Experience">
                   </div>
-                  <div class="rrpubcomcenalign1">
+                  <div class="rrpubcomcenalign12">
                     <p class="rrexpcont">I have some experience</p>
                   </div>
                 </div>
@@ -563,15 +563,15 @@
           </div>
           <div class="col-4">
             <div class="rrpubcomendalign1">
-              <div class="rrexpfreealign1 rrpubcomcenalign1" (click)="onButtonClick('button3')" (click)="Exp3()"
+              <div class="rrexpfreealign1 rrpubcomcenalign12" (click)="onButtonClick('button3')" (click)="Exp3()"
                 [ngClass]="{'selected': selectedButton === 'button3'}">
                 <div>
-                  <div class="rrpubcomcenalign1">
+                  <div class="rrpubcomcenalign12">
                     <img class="rrfreeeximg1 rrstar2align" src="./assets/Star 13.png" alt="Experience">
                     <img class="rrfreeeximg1 rrstar2align rrstar3align3" src="./assets/Star 6.png" alt="Experience">
                     <img class="rrfreeeximg1 rrstar2align" src="./assets/Star 12.png" alt="Experience">
                   </div>
-                  <div class="rrpubcomcenalign1">
+                  <div class="rrpubcomcenalign12">
                     <p class="rrexpcont">I am an expert</p>
                   </div>
                 </div>
@@ -608,11 +608,11 @@
                                 <img  src="../assets/_LinkedIn_.png" alt="linkedin in pubkin" class="rrpubimg1">
                                 <p class="rrlinkedinifl1">Import from LinkedIn</p>
                           </div> -->
-            <div class="circlin rrpubcomcenalign1">
+            <div class="circlin rrpubcomcenalign12">
               <img src="../assets/_upload share_.png" alt="Upload Resume" class="rrpubimg1">
               <p class="rrlinkedinifl1">Upload your Resume</p>
             </div>
-            <div class="circlin rrpubcomcenalign1" (click)="GoNextBtn('button3');increseFreelancingPercentage();">
+            <div class="circlin rrpubcomcenalign12" (click)="GoNextBtn('button3');increseFreelancingPercentage();">
               <p class="rrlinkedinifl1">Fill out the details manually</p>
             </div>
           </div>
@@ -672,7 +672,7 @@
     </div>
 
     <div class="container">
-      <div class="row">
+      <div class="row detscrol">
         <!-- Add Projects, links card -->
         <div class="col-4">
           <div class="kkempcrd" data-bs-toggle="modal" data-bs-target="#exampleModal" >
