--- a/src/app/modules/author-nav/author-nav.component.scss
+++ b/src/app/modules/author-nav/author-nav.component.scss
@@ -17,16 +17,31 @@
     align-items: center;
     height:80px;
 }
-.kkfrnavse{
-    color: #0F0F0F;
-    font-family: 'League Spartan', sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    cursor: pointer;
-    margin-right: 30px;
+@media only screen and (min-width:999px) and (max-width:1400px) {
+    .kkfrnavse{
+        color: #0F0F0F;
+        font-family: 'League Spartan', sans-serif;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: normal;
+        cursor: pointer;
+    }
 }
+
+@media only screen and (min-width:1401px) {
+    .kkfrnavse{
+        color: #0F0F0F;
+        font-family: 'League Spartan', sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        cursor: pointer;
+        margin-right: 30px;
+    }
+}
+
 
 
 .kkfrnavse:hover { 
