--- a/src/app/modules/profiledetails/profiledetails.component.scss
+++ b/src/app/modules/profiledetails/profiledetails.component.scss
@@ -938,11 +938,11 @@ gap:30px;
 }
 
  
-// .rrpubcomcenalign1{
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
+.rrpubcomcenalign12{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .rrpubcomendalign1{
   display: flex;
   align-items: flex-end;
@@ -1454,5 +1454,18 @@ box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6)
 }
 
 
-
-
+.detscrol{
+height: 480px;
+    overflow-y:scroll;
+    scrollbar-width: thin; 
+    scrollbar-color: transparent transparent; 
+    
+    
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+      background-color: transparent;
+    }
+}
