Commit the changes 15-03

--- a/src/app/modules/applied-jobs/applied-jobs.component.scss
+++ b/src/app/modules/applied-jobs/applied-jobs.component.scss
@@ -173,3 +173,12 @@
     line-height: 40px;
     margin-top: 21px;
 }
+.btnclose5 {
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+
+  }
