--- a/src/app/modules/author-nav/author-nav.component.html
+++ b/src/app/modules/author-nav/author-nav.component.html
@@ -41,7 +41,7 @@
               <li><a class="dropdown-item ddis">Project Dashboard</a></li><br>
             </ul>
           </div>
-          <a class="kkfrnavse rrmessalign1">Wallet</a>
+          <a class="kkfrnavse rrmessalign1" routerLink="/setting/wallet" >Wallet</a>
         </div>
       </div>
       <div class="col-3">
