--- a/src/app/modules/freelancernav/freelancernav.component.html
+++ b/src/app/modules/freelancernav/freelancernav.component.html
@@ -46,9 +46,10 @@
               <!-- <p class="opth">We help to start your journey in publishing</p> -->
               <p class="opth"></p>
             </a></li>
-          <li><a class="dropdown-item ddis" routerLink="/freelancers/ongoing-jobs">Saved Jobs<br>
+          <li><a class="dropdown-item ddis" >Saved Jobs<br>
               <p class="opth"></p>
             </a></li>
+            <!-- routerLink="/freelancers/ongoing-jobs" -->
           <!-- <li><a class="dropdown-item ddis">Need Help?<br>
               <p class="opth">We will guide you through setting up profile</p>
             </a></li> -->
