--- a/src/app/modules/freelancernav/freelancernav.component.scss
+++ b/src/app/modules/freelancernav/freelancernav.component.scss
@@ -262,6 +262,7 @@
     
        .ddis:active{
            background-color: #A426D1;
+           color: #FFF;
        }
        .kksetcrd{
            margin-top: 34px;
