--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -351,27 +351,28 @@
     <div class="row">
       <div class="col-3">
         <div>
-          <p class="rrforclientsheadtxt1">For Clients</p>
-          <p class="rrforclientstxt2">Lorem Ipsum</p>
-          <p class="rrforclientstxt2">Lorem Ipsum</p>
-          <p class="rrforclientstxt2">Lorem Ipsum</p>
-          <p class="rrforclientstxt2">Lorem Ipsum</p>
-          <p class="rrforclientstxt2">Lorem Ipsum</p>
-          <p class="rrforclientstxt2">Lorem Ipsum</p>
-          <p class="rrforclientstxt2">Lorem Ipsum</p>
-          <p class="rrforclientstxt2">Lorem Ipsum</p>
-          <img style="margin-top: 63px;" src="./assets/logo.png">
+          <p class="rrforclientsheadtxt1">For Authors</p>
+          <p class="rrforclientstxt2">How to Hire</p>
+          <p class="rrforclientstxt2">Services Offered</p>
+          <p class="rrforclientstxt2">Hiring Process</p>
+          <p class="rrforclientstxt2">Contact Information</p>
+          <p class="rrforclientstxt2">Top Categories</p>
+          <p class="rrforclientstxt2">Freelancer Success Stories</p>
+          <p class="rrforclientstxt2">Resource Center</p>
+          <p class="rrforclientstxt2">Community Forums</p>
+    
         </div>
       </div>
       <div class="col-3">
         <div class="rrpubkincenteralign1">
           <div>
             <p class="rrforclientsheadtxt1">For Freelancers</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
+            <p class="rrforclientstxt2">How to Find Work</p>
+            <p class="rrforclientstxt2">Apply for Skills</p>
+            <p class="rrforclientstxt2">Exclusive resources Freelancer Plus</p>
+            <!-- <p class="rrforclientstxt2">Lorem Ipsum</p>
+            <p class="rrforclientstxt2">Lorem Ipsum</p> -->
+            
           </div>
         </div>
       </div>
@@ -379,10 +380,10 @@
         <div class="rrpubkincenteralign1">
           <div>
             <p class="rrforclientsheadtxt1">Resources</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
-            <p class="rrforclientstxt2">Lorem Ipsum</p>
+            <p class="rrforclientstxt2">Help & Support</p>
+            <p class="rrforclientstxt2">Resources</p>
+            <p class="rrforclientstxt2">Upwork Reviews</p>
+            <p class="rrforclientstxt2">Blog</p>
           </div>
         </div>
       </div>
@@ -395,10 +396,39 @@
             <p class="rrforclientstxt2" (click)="scrollToTop();navigateToPubkin('services')">Services for PubKin</p>
           </div>
         </div>
+   
       </div>
+    </div>
+   
+    <!-- <br><br><br><br>
+    <p class="rrforclientsheadtxt4 text-center">© Copyright 2023 - Letsify Sigma4Solutions Private Limited - All rights reserved</p> -->
+<div class="row"  style="margin-top: 83px;">
+  <div class="col-6">
+    <img  src="./assets/logo.png">
+  </div>
+  <div class="col-6">
+    <div class="d-flex" style="gap: 20px;height: 69px;
+    align-items: center; float: right;">
+
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="32" viewBox="0 0 20 32" fill="none">
+      <path d="M19.75 1.12558C19.75 0.893517 19.6578 0.670958 19.4937 0.506864C19.3296 0.342769 19.1071 0.250582 18.875 0.250582H14.5C12.297 0.140841 10.14 0.907517 8.50051 2.3831C6.86098 3.85868 5.87212 5.9232 5.75 8.12558V12.8506H1.375C1.14294 12.8506 0.920376 12.9428 0.756282 13.1069C0.592187 13.271 0.5 13.4935 0.5 13.7256V18.2756C0.5 18.5076 0.592187 18.7302 0.756282 18.8943C0.920376 19.0584 1.14294 19.1506 1.375 19.1506H5.75V30.8756C5.75 31.1076 5.84219 31.3302 6.00628 31.4943C6.17038 31.6584 6.39294 31.7506 6.625 31.7506H11.875C12.1071 31.7506 12.3296 31.6584 12.4937 31.4943C12.6578 31.3302 12.75 31.1076 12.75 30.8756V19.1506H17.335C17.5296 19.1534 17.7195 19.0912 17.8748 18.974C18.0301 18.8567 18.1419 18.691 18.1925 18.5031L19.4525 13.9531C19.4873 13.8238 19.492 13.6882 19.4662 13.5569C19.4404 13.4255 19.3847 13.3018 19.3036 13.1953C19.2225 13.0888 19.118 13.0023 18.9981 12.9426C18.8783 12.8828 18.7464 12.8513 18.6125 12.8506H12.75V8.12558C12.7935 7.69242 12.997 7.29103 13.3205 6.9998C13.6441 6.70856 14.0647 6.5484 14.5 6.55058H18.875C19.1071 6.55058 19.3296 6.45839 19.4937 6.2943C19.6578 6.13021 19.75 5.90765 19.75 5.67558V1.12558Z" fill="#A426D2"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+      <path d="M16 0C11.6533 0 11.1107 0.02 9.404 0.096C7.7 0.176 6.54 0.444 5.52 0.84C4.468 1.248 3.57467 1.796 2.68533 2.68533C1.796 3.57467 1.24667 4.46667 0.84 5.52C0.444 6.54 0.174667 7.7 0.096 9.404C0.016 11.1107 0 11.6533 0 16C0 20.3467 0.02 20.8893 0.096 22.596C0.176 24.2987 0.444 25.46 0.84 26.48C1.24172 27.5478 1.87146 28.5152 2.68533 29.3147C3.48437 30.1291 4.45186 30.7589 5.52 31.16C6.54133 31.5547 7.70133 31.8253 9.404 31.904C11.1107 31.984 11.6533 32 16 32C20.3467 32 20.8893 31.98 22.596 31.904C24.2987 31.824 25.46 31.5547 26.48 31.16C27.5476 30.7578 28.5148 30.1281 29.3147 29.3147C30.1294 28.5159 30.7592 27.5483 31.16 26.48C31.5547 25.46 31.8253 24.2987 31.904 22.596C31.984 20.8893 32 20.3467 32 16C32 11.6533 31.98 11.1107 31.904 9.404C31.824 7.70133 31.5547 6.53867 31.16 5.52C30.7581 4.45229 30.1284 3.48497 29.3147 2.68533C28.5162 1.87019 27.5485 1.24025 26.48 0.84C25.46 0.444 24.2987 0.174667 22.596 0.096C20.8893 0.016 20.3467 0 16 0ZM16 2.88C20.2707 2.88 20.78 2.90133 22.4667 2.97467C24.0267 3.048 24.8733 3.30667 25.436 3.528C26.1853 3.81733 26.716 4.164 27.2787 4.72267C27.8373 5.28267 28.184 5.81467 28.4733 6.564C28.692 7.12667 28.9533 7.97333 29.024 9.53333C29.1 11.2213 29.1173 11.728 29.1173 16C29.1173 20.272 29.0973 20.78 29.0187 22.4667C28.9373 24.0267 28.6773 24.8733 28.4573 25.436C28.1971 26.1303 27.7879 26.7593 27.2587 27.2787C26.7415 27.8084 26.113 28.2165 25.4187 28.4733C24.8587 28.692 23.9987 28.9533 22.4387 29.024C20.74 29.1 20.24 29.1173 15.96 29.1173C11.6787 29.1173 11.1787 29.0973 9.48133 29.0187C7.92 28.9373 7.06 28.6773 6.5 28.4573C5.80521 28.2003 5.1769 27.7907 4.66133 27.2587C4.12611 26.745 3.71562 26.1156 3.46133 25.4187C3.24133 24.8587 2.98267 23.9987 2.90133 22.4387C2.84133 20.7587 2.82 20.24 2.82 15.98C2.82 11.7187 2.84133 11.1987 2.90133 9.49867C2.98267 7.93867 3.24133 7.08 3.46133 6.52C3.74133 5.76 4.1 5.24 4.66133 4.67867C5.22 4.12 5.74133 3.76 6.5 3.48133C7.06 3.26 7.90133 3 9.46133 2.92C11.1613 2.86 11.6613 2.84 15.94 2.84L16 2.88ZM16 7.784C14.9211 7.784 13.8527 7.99651 12.8559 8.40941C11.8591 8.8223 10.9533 9.42748 10.1904 10.1904C9.42748 10.9533 8.8223 11.8591 8.40941 12.8559C7.99651 13.8527 7.784 14.9211 7.784 16C7.784 17.0789 7.99651 18.1473 8.40941 19.1441C8.8223 20.1409 9.42748 21.0467 10.1904 21.8096C10.9533 22.5725 11.8591 23.1777 12.8559 23.5906C13.8527 24.0035 14.9211 24.216 16 24.216C18.179 24.216 20.2688 23.3504 21.8096 21.8096C23.3504 20.2688 24.216 18.179 24.216 16C24.216 13.821 23.3504 11.7312 21.8096 10.1904C20.2688 8.64961 18.179 7.784 16 7.784ZM16 21.3333C13.0533 21.3333 10.6667 18.9467 10.6667 16C10.6667 13.0533 13.0533 10.6667 16 10.6667C18.9467 10.6667 21.3333 13.0533 21.3333 16C21.3333 18.9467 18.9467 21.3333 16 21.3333ZM26.4613 7.46C26.4428 7.95683 26.2324 8.42715 25.8744 8.77209C25.5163 9.11704 25.0385 9.30977 24.5413 9.30977C24.0442 9.30977 23.5663 9.11704 23.2083 8.77209C22.8502 8.42715 22.6399 7.95683 22.6213 7.46C22.6213 6.95078 22.8236 6.46243 23.1837 6.10236C23.5438 5.74229 24.0321 5.54 24.5413 5.54C25.0506 5.54 25.5389 5.74229 25.899 6.10236C26.2591 6.46243 26.4613 6.95078 26.4613 7.46Z" fill="#A426D2"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+      <path d="M27.26 27.271H22.527V19.844C22.527 18.073 22.49 15.797 20.052 15.797C17.584 15.797 17.208 17.718 17.208 19.713V27.27H12.469V11.999H17.021V14.082H17.082C17.718 12.879 19.265 11.614 21.573 11.614C26.374 11.614 27.265 14.775 27.265 18.885V27.27L27.26 27.271ZM7.115 9.912C5.588 9.912 4.364 8.677 4.364 7.156C4.364 5.64 5.593 4.407 7.115 4.407C8.637 4.407 9.87 5.64 9.87 7.156C9.87 8.677 8.637 9.912 7.115 9.912ZM9.489 27.271H4.74V12H9.489V27.271ZM29.636 0H2.36C1.057 0 0 1.031 0 2.307V29.694C0 30.97 1.057 32.001 2.36 32.001H29.631C30.932 32.001 32 30.97 32 29.694V2.307C32 1.031 30.932 0 29.631 0L29.636 0Z" fill="#A426D2"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="47" height="34" viewBox="0 0 47 34" fill="none">
+      <path d="M46.0188 5.2348C45.4605 3.25284 43.915 1.69843 41.9242 1.14895C38.2585 0.168992 23.5224 0.168992 23.5224 0.168992C23.5224 0.168992 8.81428 0.145485 5.11042 1.14895C3.12994 1.6999 1.57699 3.25284 1.02457 5.2348C0.329643 8.99154 -0.0156191 12.7938 0.000542123 16.6138C-0.00680388 20.4087 0.336989 24.2051 1.02457 27.9384C1.57699 29.9203 3.12994 31.4747 5.11042 32.033C8.77608 33.013 23.5224 33.013 23.5224 33.013C23.5224 33.013 38.2218 33.013 41.9242 32.033C43.915 31.4747 45.4605 29.9218 46.0188 27.9384C46.6932 24.2051 47.0223 20.4087 46.9988 16.6138C47.0223 12.7938 46.7006 8.99154 46.0188 5.2348ZM18.8151 23.6468V9.54984L31.0815 16.6138L18.8151 23.6468Z" fill="#A426D2"/>
+    </svg>
     </div>
   </div>
 </div>
+  </div>
+
+</div>
+
 <div class="mdview">
   <div class="rrmdalign1">
     <div class="rrcenter">
