--- a/src/app/modules/job-details/job-details.component.html
+++ b/src/app/modules/job-details/job-details.component.html
@@ -33,7 +33,7 @@
         <div class="col-8 kkjbdetli1" >
           <div>
             <p class="kkjbtxtb1">{{jobPost.jobUniqueId}} - {{jobPost.jobTitle}} <br></p>
-            <!-- <p class="kkjbtxtb11">Posted at {{ getPostStatus(jobPost.createDate)}}</p> -->
+            <p class="kkjbtxtb11">Posted at {{ getPostStatus(jobPost.postDate)}}</p>
             <hr class="kkline1">
           </div>
           <div class="kkjbdiv2">
