--- a/src/app/modules/profiledetails/profiledetails.component.scss
+++ b/src/app/modules/profiledetails/profiledetails.component.scss
@@ -938,17 +938,22 @@ gap:30px;
 }
 
  
-// .rrpubcomcenalign1{
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
+.rrpubcomcenalign1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .rrpubcomendalign1{
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
 }
 
+
+.bankicons { 
+  width: 24px;
+  margin-top: -2px;
+}
 
 
 .kkemphus{
