--- a/src/app/modules/profilesetting/profilesetting.component.html
+++ b/src/app/modules/profilesetting/profilesetting.component.html
@@ -29,7 +29,7 @@
           routerLink="/setting/password-&-security"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button7'}"></span>Password and Security</button><br>
         <button class="sidebtn" (click)="onButtonClick('button8')" [ngClass]="{'selected': selectedButton === 'button8'}"
           routerLink="/setting/identify-verification"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button8'}"></span>Identity Verification</button><br>
-        <button class="sidebtn" (click)="onButtonClick('button9')"
+        <button class="sidebtn" (click)="onButtonClick('button9')"   routerLink="/setting/profile-setting"
           [ngClass]="{'selected': selectedButton === 'button9'}"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button9'}"></span>Profile
           Settings</button><br> 
   
