--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+#close{
+    margin-top: -10px;
+    margin-right: 10px;
+}
