--- a/src/app/modules/accept-request/accept-request.component.html
+++ b/src/app/modules/accept-request/accept-request.component.html
@@ -1,11 +1,11 @@
-<div style="    padding-bottom: 77px;">
+<div>
   <app-author-nav></app-author-nav>
 
   <div class="container">
     <div>
-      <p class="ptit">Job Title:</p>
+      <!-- <p class="ptit">Job Title:</p>
       <p class="phead">Information about perks and benefits</p>
-      <p class="posted">Posted 1 day ago</p>
+      <p class="posted">Posted 1 day ago</p> -->
       <hr class="hrmain">
       <div class="row">
         <button class="tabn" (click)="GoNextBtn('button1')" [ngClass]="{'selected': GoNext === 'button1'}">All
@@ -53,8 +53,8 @@
               <img class="sho1" (click)="showicon(i)" src="../assets/show more.png" alt="">
               <div class="EDITDEL"  *ngIf="showicons[i]">
 
-                <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2">
-                <img class="p-2" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
+                <!-- <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2"> -->
+                <img class="p-2" (click)="ApplyDeleteModal(Apply)" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
               </div>'
             </div>
           </div>
@@ -66,9 +66,9 @@
     </div>
 
     <div *ngIf="GoNext === 'button2'">
-
       <div class="container " style="margin-top: 50px;" *ngIf="Applies && Applies.length > 0">
         <div class="row deta" *ngFor="let Apply of Applies;let i = index">
+           <!-- <div *ngIf="currentDate === Apply.applyDate">        -->
           <div class="col-1">
             <!-- <div class="elli"> -->
               <div class="kkprimg" *ngIf="Apply.applideUserProfile">
@@ -77,7 +77,6 @@
             <div class="kkprimg" *ngIf="!Apply.applideUserProfile">
                 <img src="../assets/Frame 82.png" class="rounded-circle kkprimg img-responsive">
             </div>
-            
             <!-- </div> -->
            
           </div>
@@ -100,12 +99,13 @@
               <img class="sho1" (click)="showicon(i)" src="../assets/show more.png" alt="">
               <div class="EDITDEL"  *ngIf="showicons[i]">
 
-                <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2">
+                <!-- <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2"> -->
                 <img class="p-2" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
               </div>'
             </div>
-          </div>
+          <!-- </div> -->
         </div>
+      </div>
       </div>
       </div>
 
@@ -143,7 +143,7 @@
           <img class="sho1" (click)="showicon(i)" src="../assets/show more.png" alt="">
           <div class="EDITDEL"  *ngIf="showicons[i]">
 
-            <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2">
+            <!-- <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2"> -->
             <img class="p-2" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
           </div>'
         </div>
@@ -151,10 +151,12 @@
     </div>
   </div>
 </div>
+
+
 <div class="modal fade" id="deletmodel2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <button type="button" class="btn-close e1" data-bs-dismiss="modal" aria-label="Close"></button>
+      <button type="button" class="btn-close  e1" data-bs-dismiss="modal" aria-label="Close"></button>
       <div class="pad1" >
         <div class="modal-hed">
 
@@ -170,6 +172,9 @@
         </div>
       </div>
     </div>
+    
+
+
     <div class="modal fade" id="deletmodel1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -179,9 +184,13 @@
 
               <p class="c22" id="exampleModalLabel5"><b>Do you want delete this job Proposal ?</b></p>
             </div>
-            <div class="kksubbtn">
+            <div class="kksubbtn" *ngIf="deleteProposal">
               <button type="button" class="btn kkkbtnbk" data-bs-dismiss="modal">Back</button>
-              <button type="button" class="btn kkkbtncn">Confirm</button>
+              <form #updateForm="ngForm" (ngSubmit)="onSubmitStatus(updateForm)">
+                <input type="hidden" id="id" name="id" [(ngModel)]="deleteProposal.id">
+                <input type="hidden" id="status" name="status" [(ngModel)]="deleteProposal.status">          
+              <button type="submit" class="btn kkkbtncn" (click)="DeleteStatus()">Confirm</button>
+            </form>
             </div>
           </div>
         </div>
