--- a/src/app/modules/applied-jobs/applied-jobs.component.html
+++ b/src/app/modules/applied-jobs/applied-jobs.component.html
@@ -6,7 +6,7 @@
     <p class="applyhead1">Applied Jobs</p>
     <div class="row kkjbbrow">
       <div class="col-12 kkjbbx">
-        <div *ngIf="!anyJobInProgress()" class="kkjbtxtline1">
+        <div *ngIf="anyJobInProgress()" class="kkjbtxtline1">
           No applied jobs are available for you!
         </div>
         <div class="container " *ngFor="let Apply of  Applies;">
@@ -41,12 +41,12 @@
   <div class="modal-dialog dia12">
     <div class="modal-content kkde">
       <div class="modal-header " style="border-bottom: 0px;">
-        <button type="button" class="btn closemo" data-bs-dismiss="modal" aria-label="Close">
+        <!-- <button type="button" class="btn closemo" data-bs-dismiss="modal" aria-label="Close">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
             <path d="M22 2L2 22" stroke="black" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
             <path d="M2 2L22 22" stroke="black" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
-        </button>
+        </button> --> <button type="button" class="btn-close btnclose5" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" *ngIf="selectedrequest">
         <div class="covel">Cover Letter</div>
