--- a/src/app/modules/freelancer/freelancer.component.html
+++ b/src/app/modules/freelancer/freelancer.component.html
@@ -66,7 +66,7 @@
                   <span *ngIf="JobPost.currency === 'OMR'">ر.ع.</span>
                   <span *ngIf="JobPost.currency === 'SAR'">.س</span>
                   {{JobPost.toBudget}} est. time : {{JobPost.projectEndDate}} {{JobPost.durationOfProject}} - Posted
-                  <!-- {{getPostStatus(JobPost.createDate) }} -->
+                  {{ getPostStatus(JobPost.postDate) }}
                 </p>
                 <!-- <p class="kkjbtxtline3"><span *ngIf="!showMore">{{JobPost.description | slice:0:300}}....</span><span *ngIf="showMore">{{JobPost.description}}</span><span (click)="ShowMoreLess()" class="text-decoration-underline">  More</span></p> -->
                 <p class="kkjbtxtline3">
