--- a/src/app/modules/job-post/job-post.component.html
+++ b/src/app/modules/job-post/job-post.component.html
@@ -2,6 +2,7 @@
 <form novalidate autocomplete="off" #jobPostfrom="ngForm" (submit)="submitPostJob(jobPostfrom)">
     <input type="hidden" id="id" name="id" [(ngModel)]="jobservice.jobData.id">
     <input type="hidden" id="dateCreated" name="dateCreated" [(ngModel)]="jobservice.jobData.dateCreated">
+    <input type="hidden" id="postDate" name="postDate" [(ngModel)]="jobservice.jobData.postDate">
     <input type="hidden" id="createdBy" name="createdBy" [(ngModel)]="jobservice.jobData.createdBy">
     <input type="hidden" id="userId" name="userId" [(ngModel)]="jobservice.jobData.userId">
     <input type="hidden" id="jobUniqueId" name="jobUniqueId" [(ngModel)]="jobservice.jobData.jobUniqueId">
@@ -351,7 +352,7 @@
         <span class="errormsg" *ngIf="jobTitle.value?.length === 65">
             Maximum Length is 65 Characters
         </span>
-        <textarea (input)="onInputChange()" [disabled]="isTextareaDisabled()" [(ngModel)]="inputText"
+        <textarea (input)="onInputChange()"  [(ngModel)]="inputText"
             [ngClass]="getCharacterCountClass()" class="des" placeholder="Description" name="description"
             #description="ngModel" [(ngModel)]="jobservice.jobData.description"></textarea>
         <p class="remain" [ngClass]="getCharacterCountClass()">{{ charactersLeft }} Characters remaining
@@ -562,8 +563,8 @@
                     <p class="reviewskill">Skills Needed</p>
                     <div class="container">
                         <div class="row">
-                            <div class="col-4 mt-4" *ngFor="let selectedSkill of selectedSkills; let i = index">
-                                <div class="reviewskilljob"> {{selectedSkill}} </div>
+                            <div class="col-12 mt-4" >
+                                <div class="reviewskilljob"> {{jobservice.jobData.skillSet}} </div>
                             </div>
                         </div>
                     </div>
