--- a/src/app/modules/progress-jobs/progress-jobs.component.html
+++ b/src/app/modules/progress-jobs/progress-jobs.component.html
@@ -4,7 +4,7 @@
   <div class="row ">
     <div class="col-12">
       <div class="appliedborder">
-        <div *ngIf="!anyJobInProgress()" class="jobtitle">
+        <div *ngIf="anyJobInProgress()" class="jobtitle">
           No offers are available for you!
         </div>
         <div *ngFor="let JobPost of  Applies;">
